# embedded-test-automation-harness

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: android_linux_debug_notes.md  sample_triage_report.md  test_strategy.md
outputs/: history.sqlite
outputs/runs/run_001/: events.csv  manifest.json  metrics_summary.csv  report.html  report.md  results.csv
outputs/runs/run_001/tests/AI-001/iter_002/: metrics.csv
outputs/runs/run_001/tests/AI-001/iter_003/: metrics.csv
outputs/runs/run_001/tests/BOOT-001/iter_001/: metrics.csv
outputs/runs/run_001/tests/BOOT-001/iter_002/: metrics.csv
outputs/runs/run_001/tests/CAM-001/iter_001/: metrics.csv
outputs/runs/run_001/tests/CAM-001/iter_002/: metrics.csv
outputs/runs/run_001/tests/POWER-001/iter_002/: metrics.csv
outputs/runs/run_001/tests/POWER-001/iter_003/: metrics.csv
outputs/runs/run_001/tests/STAB-001/iter_002/: metrics.csv
sample_logs/perf/: sample_metrics.csv
test_cases/: README.md
test_cases/ai_inference/: README.md
test_cases/boot/: README.md
test_cases/camera/: README.md
test_cases/connectivity/: README.md
test_cases/power/: README.md
test_harness/: __init__.py  adb_device.py  cli.py  config.py  device.py  executor.py  flaky.py  log_parser.py  metrics_parser.py  report.py  simulated_device.py  ssh_device.py  storage.py  test_plan.py  triage.py
test_plans/: smoke.yaml
tests/: conftest.py  test_executor.py  test_flaky.py  test_log_parser.py  test_metrics_parser.py  test_test_plan.py  test_triage.py
(+1 files in other folders)
