[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-test-automation-harness"
version = "0.1.0"
description = "Engineering validation harness for embedded / Android / Linux / ADAS-style testing."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yu Hong Chen" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
test-harness = "test_harness.cli:app"

[tool.setuptools.packages.find]
include = ["test_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest-tmp"
